--- a/M3-D5.html
+++ b/M3-D5.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-sm bg-body-tertiary w-100">
             <div class="container-fluid">
               <div class="row w-100">
-                    <div class="collapse navbar-collapse col-md-6" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse col-xs-12 col-sm-12 col-md-6" id="navbarSupportedContent">
                         <img src="assets/logo.svg" class="m-2" alt="logo">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
@@ -77,12 +77,42 @@
                                 </ul>
                             </li>
                         </ul>
-                        <div class="col-md-6 d-flex justify-content-end m-3">
+                        <div class="col-md-6 d-flex justify-content-end m-3 position-relative">
                             <img src="assets/notific.webp" class="rounded-circle secondWith-8 mx-2" alt="">
-                            <img src="assets/avatar-1.jpg" class="rounded-circle secondWith-8 mx-2" alt="">
-                        </div>
+                            <img src="assets/avatar-1.jpg" class="pointer rounded-circle secondWith-8 mx-2" id="pointer" alt="">
+                            <div class="formaDiv">
+                                <div class="d-flex align-items-center m-3">
+                                    <img src="assets/avatar-1.jpg" class="rounded-circle mx-3" alt="Avatar" style="width: 70px;">
+                                    <div class="">
+                                        <p class="text-dark my-auto">Annete Blank</p>
+                                        <p class="text-secondary">anneteblank73@gmail.com</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="ms-4">
+                                    <div class="d-flex align-items-center gap-3 text-dark mb-2">
+                                        <ion-icon name="person-outline" class="iconcolor"></ion-icon>
+                                        <p class="my-auto fs-5">Profile</p>
+                                    </div>
+                                    <div class="d-flex align-items-center gap-3 text-dark mb-2">
+                                        <ion-icon name="star-outline" class="iconcolor"></ion-icon>
+                                        <p class="my-auto fs-5">Subscription</p>
+                                    </div>
+                                    <div class="d-flex align-items-center gap-3 text-dark mb-2">
+                                        <ion-icon name="settings-outline" class="iconcolor"></ion-icon>
+                                        <p class="my-auto fs-5">Settings</p>
+                                    </div> 
+                                </div>
+                                <hr>
+                                <div class="d-flex align-items-center gap-3 text-dark ms-4">
+                                    <ion-icon name="log-out-outline" class="iconcolor"></ion-icon>
+                                    <p class="my-auto fs-5">Sign Out</p>
+                                </div>
+                            </div>
+                        </div>                        
                     </div> 
                 </div>
+            
             </div>
         </nav>
     </header>
@@ -91,7 +121,7 @@
         <div class="jumbotron jumbotron-fluid welcSumm jbcolor">
             <div class="container d-flex">
                <div class="row">
-                    <div class=" col-12 col-md-6 text-white fw-bold">
+                    <div class=" col-12 col-md-6 text-white fw-bold mt-5">
                         <h1 class="display-4">Welcome Wev Students!</h1>
                         <p class="lead">adipisicing elit. Hic molestias nihil laudantium eius corrupti fugiat<br
                                 class="d-none d-sm-block"> similique numquam assumenda quos!
@@ -145,9 +175,9 @@
             </div> 
         </div>
     </div>
-    <hr>
-    <main>
-        <div class="container" style="margin-top: 10rem;">
+    <hr class="m-auto">
+    <main class="bg-light py-4">
+        <div class="container mt-5">
             <h3> Recomended to you</h3>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -187,7 +217,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-angular.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -222,7 +252,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-css.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -257,7 +287,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-gatsby.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -292,12 +322,12 @@
                 </div>
             </div>
         </div>
-        <div class="container" style="margin-top: 10rem;">
+        <div class="container" style="margin-top: 5rem;">
             <h3> Most Popular</h3>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-python.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -332,7 +362,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-react.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -367,7 +397,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-wordpress.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -437,12 +467,12 @@
                 </div>
             </div>
         </div>
-        <div class="container" style="margin-top: 10rem;">
+        <div class="container" style="margin-top: 5rem;">
             <h3> Trending</h3>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-html.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -477,7 +507,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-javascript.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -512,7 +542,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-laravel.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -547,7 +577,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="card mt-4" style="width: 16rem;">
-                        <img src="assets/course-graphql.jpg" class="card-img-top" alt="...">
+                        <img src="assets/course-node.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <p class="card-text">GraphicQL. Introduction to graphicQL for beginners</p>
                         <div class="d-flex align-items-center text-secondary gap-1">
@@ -583,14 +613,14 @@
             </div>
         </div>
     </main>
-
-    <footer class="my-5 mb-2 border-top border-light">
-        <div class="container">
-            <div class="row d-flex">
-                <div class="col-md-6 sm-12 text-secondary">
-                    <span>2000 Greeks. All rights reserved</span>
+    <!-- applicare mediaq che permetta di visualizzare il footer in justifie-c-center in sm -->
+    <footer class="mb-2 footer">
+        <div class="container" style="margin-top: 100px;">
+            <div class="row">
+                <div class="col-md-6 sm-12 text-secondary containerFoot">
+                    <span class="justify-content-center">2000 Greeks. All rights reserved</span>
                 </div>
-                <div class="col-md-6 sm-12 text-secondary d-flex justify-content-end gap-4">
+                <div class="col-md-6 sm-12 text-secondary d-flex justify-content-end containerFoot gap-4">
                     <span>Privacy</span>
                     <span>Terms</span>
                     <span>Feedback</span>
@@ -606,7 +636,7 @@
 
 
 
-
+    <script src="D5.JS"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
